--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/PivotTechnologies/ticker#readme",
   "dependencies": {
+    "aws-sdk": "^2.6.6",
     "axios": "^0.14.0",
     "babel": "^6.5.2",
     "babel-core": "^6.14.0",
